introduced docker test

--- a/DataPreparationUsingPycaret/Dockerfile
+++ b/DataPreparationUsingPycaret/Dockerfile
@@ -5,3 +5,4 @@ RUN python3 -m pip install Jinja2==3.1.2
 RUN curl https://rclone.org/install.sh | bash
 
 COPY data_preparation.py /tmp
+COPY run_tests.sh /tmp
