--- a/DataPreparationUsingPycaret/Dockerfile
+++ b/DataPreparationUsingPycaret/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.7
 RUN python3 -m pip install pycaret==2.3.10
 RUN python3 -m pip install Jinja2==3.1.2
+
+RUN apk --no-cache add ca-certificates fuse tzdata && \
+  echo "user_allow_other" >> /etc/fuse.conf
 RUN curl https://rclone.org/install.sh | bash
 
 COPY data_preparation.py /tmp
