--- a/DataPreparationUsingPycaret/docker-compose.test.yml
+++ b/DataPreparationUsingPycaret/docker-compose.test.yml
@@ -2,3 +2,9 @@ services:
   sut:
     build: .
     command: /tmp/run_tests.sh
+    cap_add:
+      - SYS_ADMIN
+    security_opt:
+      - apparmor:unconfined
+    devices:
+      - "/dev/fuse:/dev/fuse"
